# tarpm

./: AUTHORS.md  FORMAT  GNUmakefile  README  meson.build  meson_options.txt
doc/: tarpm.md
include/: constants.h  helpers.h  i18n.h  tarpm.h  types.h
po/: POTFILES  tarpm.pot
src/: entry.c  header.c  init.c  joinpath.c  json.c  lead.c  main.c  meson.build  mkdirp.c  read.c  rpm.c  rpmtag.h  signature.c  strfuncs.c  tags.c  unpack.c  write.c  xalloc.c
